PR c++/84489 - dependent default template argument

* pt.c (type_unification_real): Handle early substitution failure.

From-SVN: r258039